style/forms.css
.rbform {
	max-width: 400px;
}
.rbform * {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	margin: 0px;
}
.rbform .rbform-field {
	float: left;
	width: 100%;
	padding: 10px 0px;
}
.rbform .rbform-field > div,
.rbform .rbform-field > label,
.rbform .rbform-field > legend {
	width: 50%;
	float: left;
	line-height: normal;		
}
.rbform .rbform-field textarea,
.rbform .rbform-field input[type="text"],
.rbform .rbform-field input[type="email"],
.rbform .rbform-field input[type="password"] {
	width: 100%;
	padding: 5px;
}
.rbform .rbform-field select {
	width: 100%;
	padding: 3px;
}
.rbform .rbform-field div div {
	width: 45%;
	float: left;
}
.rbform .rbform-field div div:last-child {
	float: right;
}
.rbform .rbform-field.multi > div label {
	float: left;
	clear: both;
}
.rbform .rbform-field.submit {
	text-align: center;
}

/* RB Agency Layout 7 */
#rblayout-seven #profile-slider .slides > li .multi {
	width: 50%;
	float: left;
}
#rblayout-seven #profile-links {
	padding: 15px 0px;
	text-align: right;
}
#rblayout-seven #profile-links li {
	padding: 0px 5px;
	display: inline-block;
}
#rblayout-seven #profile-links li a {
	text-decoration: none;
}
#rblayout-seven .rbtab-content {
	padding: 15px;
	background: #fff;
}
#rblayout-seven #media-tab ul li a {
	line-height: 18px;
	text-decoration: none;
}

